--- a/index.html
+++ b/index.html
@@ -4,9 +4,55 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>cinemap MVP</title>
+  <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
+    #map {
+      height: 100%;
+      width: 100%;
+    }
+  </style>
 </head>
 <body>
-  <h1>Willkommen bei cinemap</h1>
-  <p>Hier entsteht eine interaktive Kinokarte der Schweiz.</p>
+  <div id="map"></div>
+
+  <script>
+    function initMap() {
+      const center = { lat: 46.8182, lng: 8.2275 }; // Schweiz-Zentrum
+      const map = new google.maps.Map(document.getElementById("map"), {
+        zoom: 8,
+        center: center,
+      });
+
+      // Beispiel-Marker
+      const kinos = [
+        { name: "Kino Zürich", lat: 47.3769, lng: 8.5417, preis: "ab CHF 150 / Monat" },
+        { name: "Kino Bern", lat: 46.9481, lng: 7.4474, preis: "ab CHF 120 / Monat" },
+        { name: "Kino St. Gallen", lat: 47.4239, lng: 9.3748, preis: "ab CHF 130 / Monat" }
+      ];
+
+      kinos.forEach(kino => {
+        const marker = new google.maps.Marker({
+          position: { lat: kino.lat, lng: kino.lng },
+          map: map,
+          title: kino.name
+        });
+
+        const info = new google.maps.InfoWindow({
+          content: `<strong>${kino.name}</strong><br>${kino.preis}`
+        });
+
+        marker.addListener("mouseover", () => info.open(map, marker));
+        marker.addListener("mouseout", () => info.close());
+      });
+    }
+  </script>
+
+  <script async
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAAkrj1uHfPeRO_F7i5OFXhYMsQKwDuuWs&callback=initMap">
+  </script>
 </body>
 </html>
