--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div id="map"></div>
 
   <script>
-    async function initMap() {
+    defer function initMap() {
       const map = new google.maps.Map(document.getElementById("map"), {
         center: { lat: 46.8182, lng: 8.2275 },
         zoom: 8,
