--- a/index.html
+++ b/index.html
@@ -88,6 +88,6 @@
     }
   </script>
 
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=DEIN_API_KEY&callback=initMap"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAAkrj1uHfPeRO_F7i5OFXhYMsQKwDuuWs&callback=initMap"></script>
 </body>
 </html>
