--- a/index.html
+++ b/index.html
@@ -13,31 +13,37 @@
     }
     .modal {
       display: none;
-      position: fixed;
-      z-index: 999;
-      padding: 20px;
-      background: white;
-      border: 1px solid #ccc;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.3);
-      top: 20%;
-      left: 50%;
-      transform: translateX(-50%);
-      max-width: 90%;
+      position: absolute;
+      background: #fff;
+      padding: 1rem;
+      border-radius: 8px;
+      box-shadow: 0 4px 16px rgba(0,0,0,0.25);
+      font-family: Arial, sans-serif;
+      max-width: 280px;
+      z-index: 9999;
+      line-height: 1.4;
     }
-    .modal h2 {
-      margin-top: 0;
+    .modal strong {
+      font-size: 1.1rem;
+      display: block;
+      margin-bottom: 0.5rem;
     }
-    .modal-close {
-      float: right;
-      cursor: pointer;
-      font-size: 20px;
+    .modal small {
+      display: block;
+      color: #666;
+      margin-bottom: 0.5rem;
+    }
+    .modal .preis {
+      font-weight: bold;
+      color: #007BFF;
+      font-size: 1rem;
     }
   </style>
 </head>
 <body>
   <div id="map"></div>
 
-  <div class="modal" id="kinoModal">
+  <div id="modal" class="modal"></div>
     <span class="modal-close" onclick="closeModal()">&times;</span>
     <h2 id="kinoName"></h2>
     <p><strong>Adresse:</strong> <span id="kinoAdresse"></span></p>
@@ -67,20 +73,22 @@
           title: `${kino.name} – ab CHF ${kino.preis}`
         });
 
-        marker.addListener("click", () => {
-          showModal(kino);
+        map.addListener("click", () => {
+          document.getElementById("modal").style.display = "none";
         });
       });
     }
 
-    function showModal(kino) {
-      document.getElementById("kinoName").textContent = kino.name;
-      document.getElementById("kinoAdresse").textContent = kino.strasse;
-      document.getElementById("kinoOrt").textContent = kino.ort;
-      document.getElementById("kinoSaele").textContent = kino.saele;
-      document.getElementById("kinoPreis").textContent = `CHF ${kino.preis} / Monat`;
-
-      document.getElementById("kinoModal").style.display = "block";
+    function showModal(kino, position) {
+      const modal = document.getElementById("modal");
+      modal.innerHTML = `
+        <strong>${kino.name}</strong>
+        <small>${kino.strasse}, ${kino.ort}</small>
+        <div class="preis">ab CHF ${parseFloat(kino.preisProMonat).toFixed(2)} / Monat</div>
+      `;
+      modal.style.left = "12px";
+      modal.style.top = "12px";
+      modal.style.display = "block";
     }
 
     function closeModal() {
