--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
 <head>
-  <title>Cinemap CH</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Cinemap MVP</title>
   <style>
     html, body, #map {
       height: 100%;
       margin: 0;
       padding: 0;
-      font-family: sans-serif;
+      font-family: Arial, sans-serif;
     }
     .modal {
       display: none;
@@ -18,7 +18,6 @@
       padding: 1rem;
       border-radius: 8px;
       box-shadow: 0 4px 16px rgba(0,0,0,0.25);
-      font-family: Arial, sans-serif;
       max-width: 280px;
       z-index: 9999;
       line-height: 1.4;
@@ -42,60 +41,58 @@
 </head>
 <body>
   <div id="map"></div>
-
   <div id="modal" class="modal"></div>
-    <span class="modal-close" onclick="closeModal()">&times;</span>
-    <h2 id="kinoName"></h2>
-    <p><strong>Adresse:</strong> <span id="kinoAdresse"></span></p>
-    <p><strong>Ort:</strong> <span id="kinoOrt"></span></p>
-    <p><strong>Anzahl Säle:</strong> <span id="kinoSaele"></span></p>
-    <p><strong>Preis pro Monat:</strong> <span id="kinoPreis"></span></p>
-  </div>
 
   <script>
     let map;
 
     async function initMap() {
+      const response = await fetch('kino_daten.json');
+      const kinos = await response.json();
+
       map = new google.maps.Map(document.getElementById("map"), {
-        center: { lat: 46.8, lng: 8.2 },
-        zoom: 8
+        center: { lat: 46.8, lng: 8.2 }, // Schweiz-Mitte
+        zoom: 8,
+        mapTypeId: "roadmap"
       });
 
-      const response = await fetch("kino_daten.json");
-      const kinoDaten = await response.json();
+      const modal = document.getElementById("modal");
 
-      kinoDaten.forEach(kino => {
-        const position = { lat: kino.lat, lng: kino.lng };
+      kinos.forEach(kino => {
+        const position = {
+          lat: parseFloat(kino.latitude),
+          lng: parseFloat(kino.longitude)
+        };
 
         const marker = new google.maps.Marker({
           map: map,
           position: position,
-          title: `${kino.name} – ab CHF ${kino.preis}`
+          title: kino.name
         });
 
-        map.addListener("click", () => {
-          document.getElementById("modal").style.display = "none";
+        marker.addListener("click", () => {
+          showModal(kino);
         });
+      });
+
+      map.addListener("click", () => {
+        modal.style.display = "none";
       });
     }
 
-    function showModal(kino, position) {
+    function showModal(kino) {
       const modal = document.getElementById("modal");
       modal.innerHTML = `
         <strong>${kino.name}</strong>
         <small>${kino.strasse}, ${kino.ort}</small>
         <div class="preis">ab CHF ${parseFloat(kino.preisProMonat).toFixed(2)} / Monat</div>
       `;
-      modal.style.left = "12px";
-      modal.style.top = "12px";
       modal.style.display = "block";
-    }
-
-    function closeModal() {
-      document.getElementById("kinoModal").style.display = "none";
+      modal.style.left = "20px";
+      modal.style.top = "20px";
     }
   </script>
 
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAAkrj1uHfPeRO_F7i5OFXhYMsQKwDuuWs&callback=initMap"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=DEIN_API_KEY&callback=initMap"></script>
 </body>
 </html>
