--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cinemap MVP</title>
+  <meta name="google-maps-key" content="REPLACE_ME_BY_NETLIFY">
   <style>
     html, body, #map {
       height: 100%;
